<resources>
    <string name="app_name">My Contacts</string>
    <string name="action_home">Home</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="title_activity_edit_details">Edit Details</string>
    <string name="action_delete_contact">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_edit_contact">Edit</string>
    <string name="action_view_groups">View Groups</string>
    <string name="title_activity_view_groups">View Groups</string>
    <string name="title_activity_edit_groups">Edit Groups</string>
    <string name="action_add_group">Add Group</string>
</resources>
