<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.erika.mycontacts.EditDetails">

    <item
        android:id="@+id/action_save_contact"
        android:icon="@android:drawable/ic_menu_save"
        android:onClick="editContact"
        android:orderInCategory="1"
        android:title="@string/action_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="2"
        android:title="@string/action_add_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_contact"
        android:orderInCategory="3"
        android:title="@string/action_delete_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_groups"
        android:orderInCategory="4"
        android:title="@string/action_view_groups"
        app:showAsAction="never" />
</menu>