<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.erika.mycontacts.ViewDetails">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="Home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="2"
        android:title="@string/action_add_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_contact"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="3"
        android:title="@string/action_edit_contact"
        android:onClick="openEditContact"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_contact"
        android:orderInCategory="4"
        android:title="@string/action_delete_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_groups"
        android:orderInCategory="5"
        android:title="@string/action_view_groups"
        app:showAsAction="never" />
</menu>