<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.erika.mycontacts.AddContact">

    <item
        android:id="@+id/action_confirm_add_contact"
        android:icon="@android:drawable/ic_menu_save"
        android:onClick="createContact"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="2"
        android:title="@string/action_add_contact"
        app:showAsAction="never" />
</menu>
